@@ -1,2 +1,11 @@
-.build
-Dist-Zilla-App-Command-dumpwith-*
+/.build
+/Dist-Zilla-App-Command-dumpwith-*
+/tmp/
+/META.json
+/MYMETA.json
+/META.yml
+/MYMETA.yml
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
