@@ -33,4 +33,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
  - CPAN::Meta 2.120900
  - ExtUtils::MakeMaker 6.98
  - Test::More 1.001003
-
